[tool.poetry]
name = "setuplog"
version = "0.3.0"
description = ""
authors = []
license = "MIT"
keywords = [ "logging", "logger", "log" ]
repository = "https://github.com/schireson/setuplog"
packages = [
    { from = "src", include = "setuplog" },
]
readme = 'README.md'
include = [
    "*.md",
    "py.typed",
]

[tool.poetry.dependencies]
python = ">=3.3, !=3.3.*, !=3.4.*, !=3.5.*, <4"

[tool.poetry.dev-dependencies]
bandit = "*"
black = { version = "19.3b0", allow-prereleases = true, python = ">=3.6" }
coverage = ">=5"
mypy = ">=0.931"
flake8 = "^3.7"
isort = "^4.3"
pydocstyle = "*"
pytest = "^4.4"
responses = "*"

[tool.black]
line_length = 100
target_version = [ 'py36', 'py37', 'py38' ]

[tool.isort]
default_section = 'FIRSTPARTY'
include_trailing_comma = true
indent = '    '
length_sort = false
line_length = 88
multi_line_output = 3
order_by_type = false
known_first_party = 'tests'
use_parentheses = true

[tool.mypy]
strict_optional = true
ignore_missing_imports = true
warn_unused_ignores = true
implicit_reexport = true
incremental = true

[build-system]
requires = [ "poetry>=0.12" ]
build-backend = "poetry.masonry.api"
